# nenbody

./: Cargo.toml  README.md
shaders/: scene.frag  scene.frag.spv  scene.vert  scene.vert.spv
src/: gfx.rs  main.rs  renderer.rs  species.rs  ui.rs
