[package]
name = "nenbody"
version = "0.1.0"
authors = ["David Schwarz <dsdavidschwarz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.22.2"
env_logger = "0.7.1"
wgpu = "0.6.0"
futures = "0.3.6"
log = "0.4.11"
bytemuck = { version = "1.4.1", features = ["derive"]}
cgmath = "0.17.0"
imgui = "0.5"
imgui-wgpu = "0.11"
imgui-winit-support = "0.5.0"
rand = "0.7.3"
rayon = "1.4.1"
png = "0.16"
image = "0.23.10"
